# learning-rust

./: .gitignore  notes.md
crud/: .env  Cargo.toml  Dockerfile  docker-compose.yaml
crud/src/: main.rs
crud/src/databases/: postgres_connection.rs
project_cargo/: Cargo.toml
project_cargo/src/: lib.rs  main.rs
project_cargo/src/advanced/: functions.rs  mod.rs  traits.rs  types.rs  unsafe.rs
project_cargo/src/closures/: hello.rs  mod.rs
project_cargo/src/collections/: hashmap.rs  mod.rs  strings.rs  vec.rs
project_cargo/src/enums/: mod.rs
project_cargo/src/errors/: mod.rs
project_cargo/src/flow/: mod.rs
project_cargo/src/functions/: mod.rs
project_cargo/src/game/: mod.rs
project_cargo/src/game_test/: mod.rs
project_cargo/src/generics/: mod.rs
project_cargo/src/impls/: mod.rs
project_cargo/src/iterators/: mod.rs
project_cargo/src/lifetime/: mod.rs
project_cargo/src/macros/: macro_rules.rs  mod.rs
project_cargo/src/modules/: food.rs  mod.rs  vegetables.rs
project_cargo/src/oop/: encapsulation.rs  gui.rs  mod.rs  my_version_post.rs  patterns.rs  post.rs
project_cargo/src/ownership/: mod.rs
project_cargo/src/project_io/: lib.rs  mod.rs
project_cargo/src/slices/: mod.rs
project_cargo/src/smart_pointers/: boxs.rs  cycle.rs  deref.rs  drop.rs  mod.rs  rc.rs  ref_cell.rs
project_cargo/src/structs/: mod.rs
project_cargo/src/tests/: mod.rs
project_cargo/src/threads/: channel.rs  mod.rs  mutex.rs
project_cargo/src/traits/: mod.rs
project_cargo/src/variables/: mod.rs
project_cargo/tests/: integration_test.rs
(+44 files in other folders)
