[[bin]]
name = "crud"
path = "src/main.rs"

[package]
name = "crud"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
bcrypt = "0.15.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
dotenv = "0.15.0"
validator = { version = "0.18.1", features = ["derive"] }
