[package]
name = "project_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

# profile dev when you run cargo build
[profile.dev]
opt-level = 0
# profile release when you run cargo build --release
[profile.release]
opt-level = 3
