[package]
name = "project_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
name = "my_macros_lib"
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
syn = { version = "2.0.58", features = ["full"] }
quote = "1.0.0"

# profile dev when you run cargo build
[profile.dev]
opt-level = 0
# profile release when you run cargo build --release
[profile.release]
opt-level = 3
